# src/main/java/swagger/automate/rest/impl/RestTeste2.java
@@ -1,11 +1,7 @@
 package swagger.automate.rest.impl;
 
-import java.util.ArrayList;
-import java.util.List;
-
 import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
-import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
@@ -14,33 +10,18 @@ import javax.ws.rs.core.Response;
 
 import org.springframework.stereotype.Component;
 
-import swagger.automate.ReflectionHelper;
 import swagger.automate.ReflectionHelper4;
-import swagger.automate.rest.RestTesteInterface;
+import swagger.automate.rest.RestTesteInterface2;
 
 @Component
 @Path("/usuario")
-public class RestTeste implements RestTesteInterface {
+public class RestTeste2 implements RestTesteInterface2 {
 
-	@Path("login")
-	@POST
+	@Path("listRecipientes")
+	@GET
 	@Consumes(MediaType.APPLICATION_JSON)
 	@Produces(MediaType.APPLICATION_JSON)
-	public Response restTeste(ReflectionHelper obj) {
-		try {
-			List<String> a = new ArrayList<>();
-			return Response.ok().entity(new String()).build();
-		} catch (Exception e) {
-			e.printStackTrace();
-			return Response.serverError().build();
-		}
-	}
-
-	@Path("receberDadosRecipientes")
-	@POST
-	@Consumes(MediaType.APPLICATION_JSON)
-	@Produces(MediaType.APPLICATION_JSON)
-	public Response restTeste2(List<ReflectionHelper> id) {
+	public Response listRecipientes() {
 		try {
 
 			return Response.ok().build();
@@ -48,5 +29,19 @@ public class RestTeste implements RestTesteInterface {
 			e.printStackTrace();
 			return Response.serverError().build();
 		}
+	}
+
+	@Path("listDadosRecipiente/{id}")
+	@GET
+	@Consumes(MediaType.APPLICATION_JSON)
+	@Produces(MediaType.APPLICATION_JSON)
+	public Response listDadosRecipiente(@PathParam("id") Long recipienteId) {
+		try {
+			return Response.status(Response.Status.OK).entity(new ReflectionHelper4()).build();
+		} catch (Exception e) {
+			e.printStackTrace();
+			return Response.serverError().entity(new Error("Erro no servidor")).build();
+		}
+
 	}
 }
