# src/main/resources/swaggerDoc.yaml
@@ -8,32 +8,11 @@ basePath: "/rest/"
 tags:
 - name: "Teste"
   description: "Description"
+- name: "Aasd"
+  description: "Description"
 schemes:
 - "http"
 paths:
-  /login:
-    post:
-      tags:
-      - "Teste"
-      summary: "Loggar com o funcionario"
-      description: "Entrar no sistema"
-      operationId: "Testelogin"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Aparelhos bluetooth e senha do funcionario"
-        required: true
-        schema:
-          $ref: "#/definitions/ReflectionHelper2"
-      responses:
-        "403":
-          description: "desc"
-          schema:
-            $ref: "#/definitions/ErroMensage"
   /receberDadosRecipientes:
     post:
       tags:
@@ -51,27 +30,41 @@ paths:
         description: "Aparelhos bluetooth e senha do funcionario"
         required: true
         schema:
-          $ref: "#/definitions/ReflectionHelper"
+          type: "array"
+          items:
+            $ref: "#/definitions/ReflectionHelper"
       responses:
         "200":
           description: "desc"
-  /listRecipientes:
-    get:
+  /login:
+    post:
       tags:
       - "Teste"
       summary: "Loggar com o funcionario"
       description: "Entrar no sistema"
-      operationId: "listRecipientes"
+      operationId: "Testelogin"
+      consumes:
+      - "application/json"
       produces:
-        - "application/json"
-      parameters: []
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Aparelhos bluetooth e senha do funcionario"
+        required: true
+        schema:
+          type: "array"
+          items:
+            $ref: "#/definitions/ReflectionHelper"
       responses:
-        "400":
+        "403":
           description: "desc"
+          schema:
+            $ref: "#/definitions/ErroMensage"
   /listDadosRecipiente/{id}:
     get:
       tags:
-      - "Teste"
+      - "Aasd"
       summary: "Loggar com o funcionario"
       description: "Entrar no sistema"
       operationId: "listDadosRecipiente/{id}"
@@ -89,6 +82,19 @@ paths:
           description: "desc"
           schema:
             $ref: "#/definitions/ReflectionHelper4"
+  /listRecipientes:
+    get:
+      tags:
+      - "Aasd"
+      summary: "Loggar com o funcionario"
+      description: "Entrar no sistema"
+      operationId: "listRecipientes"
+      produces:
+        - "application/json"
+      parameters: []
+      responses:
+        "400":
+          description: "desc"
 definitions:
   ReflectionHelper:
     type: "object"
